--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "flatpickr": "^4.6.3",
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.7.0",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
