--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.7.0",
     "popper.js": "^1.16.1",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "typed.js": "^2.0.11"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
